log
Wed 10 May 2023 11:04:49 PM UTC: 
 tests:  0|4
total_score: 0/70
cfd44d2
Wed 10 May 2023 11:08:45 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:46: error: expected ‘)’ before ‘;’ token
   39 |   dato->heapArray = malloc(sizeof(heapElem());
      |                           ~                  ^
      |                                              )
heap.c:41:15: error: expected ‘;’ before ‘}’ token
   41 |   return dato;
      |               ^
      |               ;
   42 | }
      | ~              
heap.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3af8439
Wed 10 May 2023 11:09:08 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2d16a00
Wed 10 May 2023 11:10:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
1f7cd5f
Wed 10 May 2023 11:15:00 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   22 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f9e6be0
Wed 10 May 2023 11:15:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
85e80fb
Wed 10 May 2023 11:15:46 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
fdb0a86
Wed 10 May 2023 11:20:46 PM UTC: 
 heap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
2138128
Wed 10 May 2023 11:24:37 PM UTC: 
 heap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  7|1
total_score: 45/70
a518a27
Wed 10 May 2023 11:54:53 PM UTC: 
 heap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
885ef80
Thu 11 May 2023 12:06:16 AM UTC: 
 heap.c | 37 +++++++++++++++++--------------------
 1 file changed, 17 insertions(+), 20 deletions(-)
 tests:  7|1
total_score: 45/70
84f1e97
Fri 12 May 2023 01:38:17 AM UTC: 
 heap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:67:7: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   67 |       j++;
      |       ^
      |       jn
heap.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
adec8f8
Fri 12 May 2023 01:38:26 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
7392061
